<resources>
    <string name="app_name">Moodinary</string>

<!--    Home-->
    <string name="description_logo">무디너리 로고</string>
    <string name="description_btn_my_page">마이페이지 이동 버튼</string>
    <string name="description_btn_diary_write">일기 작성 버튼</string>
    <string name="label_home_date">2월 16일 화요일</string>
    <string name="label_home_text">은지님의 감정을 기록해볼까요?</string>
    <string name="label_home_write">작성하러 가기</string>

<!--    Calender-->
    <string-array name="custom_weekdays">
        <item>MO</item>
        <item>TU</item>
        <item>WE</item>
        <item>TH</item>
        <item>FR</item>
        <item>SA</item>
        <item>SU</item>
    </string-array>

    <string name="description_back_btn">뒤로 가기</string>
    <string name="label_diary_title">글 쓰기</string>
    <string name="label_save">저장</string>
    <string name="label_date">2024.12.02</string>
    <string name="label_daily_emotion">오늘의 기분을 골라보세요</string>
    <string name="label_panic">당황</string>
    <string name="label_anger">분노</string>
    <string name="label_anxiety">불안</string>
    <string name="label_joy">기쁨</string>
    <string name="label_expect">기대</string>
    <string name="label_stable">안정</string>
    <string name="hint_write">오늘은 무슨 일이 있었나요?\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="label_home">홈</string>
    <string name="label_calender">캘린더</string>
    <string name="label_diary">일기 작성</string>
    <string name="description_calender_logo">캘린더 로고</string>
    <string name="description_btn_today_emotion">오늘의 감정 버튼</string>
    <string name="description_btn_free_week_report">주별 감정 리포트 보러가기 버튼</string>
    <string name="label_emotion_percent">내 감정 일치도 93%</string>
    <string name="label_write">완료</string>
    <string name="label_sad">슬픔</string>
    <string name="label_scared">공포</string>
    <string name="label_loading">로딩</string>
    <string name="description_loading_image">로딩 이미지</string>
    <string name="label_loading_text">오늘의 감정을 레포트로 만들고 있어요...</string>
    <string name="label_result_keyword_text">분석 결과</string>
    <string name="label_result_keyword_today">은지님의 오늘 키워드</string>
    <string name="description_keyword_confirm">키워드 확인 버튼</string>
    <string name="label_keyword">키워드</string>
    <string name="label_report_free">레포드</string>
    <string name="description_btn_report_back">레포트 뒤로가기</string>
    <string name="description_report_today_moodie">오늘의 감정 레포트</string>
    <string name="description_report_emotion">내가 생각한 오늘의 감정</string>
    <string name="description_report_emotion_ai">AI가 분석한 오늘 나의 감정</string>
    <string name="description_report_diary">오늘의 일기</string>

    <string name="label_report_diary">아니 이럴수가 오늘 너무 화나는 일이 있었다!!!\n출근하는데 평소 오는 시간에 전철이 안 와서 시간표를 확인하니까 웬걸 파업이라는 거야! 가뜩이나 늦던 경의중앙이 물 만났다고 작정하고 늦게 오는 시간표로 바뀐 것이지.... 이런 되도않는 경우가 있나 전철이 늦게 오니까 사람이 겁나 꽉꽉 밀려서 끼고... 와중에 내 앞에 자리가 나서 앉으려는데 어떤 남자가 들이밀고와서 자기가 앉는다고 냅다 앉아버린거야 그것도 들어오면서 내 발을 밟아가지고 하... 화내려고 딱 앞을 쳐다보니까 앉자마자 자는척하는데 진짜 별 미친놈 다 본다 안 그래도 지치는데 이사람 뭐지? 아무튼 너무 열받고 아픈 상태로 어찌저찌 갔는데 가니까 팀장이 엄청 열받아있는거야 기획안 올릴 때 자료 하나가 바뀌어서 올라갔는데 그걸로 엄청 닦였다 그러데?? 그니까 왜 검토를안하고 그냥올리냐고 ;;;;; 여튼 그래서 다같이 왕고생했다 ㅋㅋ... 아 스트레스받아 ㅠㅠ 팀장 🐶또라이 내가진짜 퇴사를해야지 안되겠어 ;; 팀 전체 메신저에다 대고 오늘 점심시간 전까지 기획안 싹 검토 받으라고 막 뭐라하고 갔어 진짜 엎어지면 마흔인 나이에...;; 낼 모레 마흔이면서 막내가 스물두살인 디자인팀에다 왤캐 히스테리를 부리는건지;; 하여튼 그런 일이 있었다.... 요즘은 집도 이사준비하느라고 눈코뜰새없이 바쁜데 이번 연말 너무 힘든거 같아... 피곤하니까 졸리다ㅠ.ㅠ 무기력해... 그래도 내 기획자료는 한방에 수정사항 끝내고 픽스받아서 다행이야!! 내일은 연착할 일 없는 버스타야겠다... 일기 끝</string>
    <string name="description_report_mood">레포트 감정 결과</string>
    <string name="description_emotion_combination">오늘의 감정 결합</string>
    <string name="description_report_ai">오늘의 무드 레포트</string>
    <string name="label_report_ai">오늘 하루는 여러 방면에서 예상치 못한 일들이 겹치면서 당신에게 정말 감정적, 체력적으로 큰 소모를 가져왔네요. 파업으로 인한 출근길부터 다른 사람의 무례한 행동까지, 하루의 시작이 이미 벅찼을 겁니다.\n \n그리고 출근 후에도 업무상 실수와 팀장의 히스테리로 분위기까지 나빠졌으니 더더욱 스트레스를 받으셨겠어요. 이사 준비로도 바쁜 와중에 지쳐있는데, 이렇게 겹치는 악재들이 감당하기 어려웠을 것 같아요.\n\'무기력함\'이 느껴지는 건 당연합니다.\n\n하지만, 그 와중에도 기획 자료를 잘 마무리하고 픽스를 받은 당신은 정말 대단해요. 이미 여러 압박 속에서도 할 일을 제대로 해낸 모습에서 책임감과 성실함이 느껴집니다.\n\n하루 끝에 \"그래도 다행\"이라는 생각을 하며 내일을 계획하는 것도 당신의 긍정적인 면모가 돋보여요.</string>
    <string name="label_care_tips">오늘 느낀 분노와 당황은 억울하고 답답한 상황 때문이었어요.\n이런 감정을 해소하지 않으면 무기력감이 더 커질 수 있습니다.\n일기를 쓰신 것처럼 감정을 표현하는 것도 좋은 방법이지만,\n오늘은 가벼운 산책이나 조용한 음악을 들으며\n감정을 잠시 내려놓아보세요.</string>
    <string name="description_report_care_tips">케어 팁</string>
    <string name="description_save">저장하기 버튼</string>
</resources>