<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.moodinary.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_diary"
            app:destination="@id/navigation_diary" />
    </fragment>
    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.example.moodinary.ui.calender.CalenderFragment"
        android:label="@string/label_calender"
        tools:layout="@layout/fragment_calender" />
    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.example.moodinary.ui.diary.DiaryFragment"
        android:label="@string/label_diary"
        tools:layout="@layout/fragment_diary" />
</navigation>