<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_result_keyword"
            style="@style/AppTextLabel2.Gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/label_result_keyword_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_result_keyword_today"
            style="@style/AppTextSubTitle.Dark90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/pretendard_semibold"
            android:text="@string/label_result_keyword_today"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result_keyword" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_result_keyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result_keyword_today"
            tools:listitem="@layout/item_result_keyword" />

        <ImageButton
            android:id="@+id/btn_result_keyword_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="75dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_keyword_confirm"
            android:src="@drawable/btn_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_result_keyword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>